--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "build":[
         {
-            "src": "./src/index.js",
+            "src": "./index.js",
             "use":"@versel/node"
         }
     ],
