--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SECRET_KEY = "CrimeAlertApi"
-MYSQL_HOST = 'byxnbyik5gbyy3dhxbr4-mysql.services.clever-cloud.com'
-MYSQL_USER = 'urwlcupadnzqgqcx'
-MYSQL_PASSWORD = '9pm5GSgyG8XKqi56cMoE'
-MYSQL_DATABASE = 'byxnbyik5gbyy3dhxbr4'
+MYSQL_HOST = '127.0.0.1'
+MYSQL_USER = 'root'
+MYSQL_PASSWORD = ''
+MYSQL_DATABASE = 'crimealertdb'
